--- a/src/common/stylus/reset.styl
+++ b/src/common/stylus/reset.styl
@@ -59,3 +59,6 @@ input
   background-color: white
   -webkit-rtl-ordering: logical
   cursor: text
+input:-webkit-autofill
+  -webkit-box-shadow: 0 0 0px 1000px white inset;
+
